# LYNORA

./: README.md
lynora/: .gitignore  ARCHITECTURE.md  CHANGELOG.md  DEMO_SCRIPT.md  DEPLOYMENT.md  LICENSE  MASSA_MIGRATION_COMPLETE.md  QUICK_START.md  README.md  SUBMISSION.md  TODO.md  WALLETCONNECT_SETUP.md
lynora/contract/: .cursorignore  asconfig.json  deploy-simple.js  deploy.js  package-lock.json  package.json
lynora/contract-linera-backup/: .gitignore  Cargo.toml  linera.toml
lynora/contract-linera-backup/src/: lib.rs  service.rs  state.rs
lynora/contract/assembly/: main.ts  main.ts.backup  test.ts  test2.ts  test3.ts  test4.ts  test5.ts  test6.ts  test7.ts
lynora/frontend/: SUPABASE_SCHEMA_FIXED.sql  index.html  package-lock.json  package.json
lynora/frontend/src/: App.tsx
lynora/frontend/src/components/: BettingModal.tsx  DarkVeil.tsx  ElectricBorder.css  ErrorBoundary.tsx  Header.tsx  MarketCard.tsx  MarketList.tsx
lynora/frontend/src/lib/: contract.ts  massa.ts  oracle.ts  supabase.ts  wallet.ts
lynora/frontend/src/pages/: CreateMarketPage.tsx  HomePage.tsx  MarketDetailPage.tsx  MyMarketsPage.tsx
lynora/my-app/: package-lock.json
lynora/scripts/: build.sh  deploy.sh  test.sh
